--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #30c564;
+    background-color: #F8B8D2;
 }
 
 .tabl {
@@ -40,7 +40,7 @@ input {
 }
 
 .result {
-    background-color: #c66c6c;
+    background-color: #A3DDDE;
 }
 
 .th-1, .th-2 {
@@ -53,7 +53,7 @@ input {
 @media (max-width: 599px) {
     .table {
         height: 40px;
-        width: 280px;
+        width: 315px;
     }
 
     .button_c div {
@@ -62,7 +62,7 @@ input {
     }
     .button_c {
         height: 0px;
-        width: 280px;
+        width: 315px;
         margin-top: 5px;
     }
 
@@ -78,8 +78,8 @@ input {
     }
 
     .result {
-        height: 45px;
-        width: 300px;
+        height: 50px;
+        width: 330px;
     }
     
     .th-1 {
@@ -92,5 +92,4 @@ input {
         font-size: 16px;
         font-weight: 500;
     }
-    
 }
